<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.parcvehicule.Propos"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_titre"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/text_title"></TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_dev1"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/icon_acteur"
        android:layout_below="@id/text_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/text_dev"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_dev2"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/icon_acteur"
        android:layout_below="@id/text_dev"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/text_dev2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_univer"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/icon_univer"
        android:layout_below="@id/text_dev2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/text_univer"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_date"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/icon_date"
        android:layout_below="@id/text_univer"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/text_date"
        />

</RelativeLayout>
